<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2021, RTE (http://www.rte-france.com) This Source Code
    Form is subject to the terms of the Mozilla Public License, v. 2.0. If a
    copy of the MPL was not distributed with this file, You can obtain one at
    http://mozilla.org/MPL/2.0/.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent</artifactId>
        <version>15</version>
        <relativePath />
    </parent>

    <artifactId>powsybl-dynawo</artifactId>
    <version>2.4.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>powsybl dynawo</name>
    <description>Dynawo integration modules for powsybl</description>
    <url>https://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-dynawo.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-dynawo.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-dynawo</url>
    </scm>

    <developers>
        <developer>
            <name>Florian DUPUY</name>
            <email>florian.dupuy@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Marcos de Miguel</name>
            <email>demiguelm@aia.es</email>
            <organization>Grupo AIA</organization>
            <organizationUrl>http://www.aia.es</organizationUrl>
        </developer>
    </developers>

    <modules>
        <module>commons</module>
        <module>dynaflow</module>
        <module>dynawaltz</module>
        <module>dynawaltz-dsl</module>
        <module>distribution</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <powsyblcore.version>6.2.0</powsyblcore.version>
        <groovy.version>4.0.14</groovy.version> <!-- used for groovy-json but also for groovydoc (dynawaltz-dsl) -->
        <sonar.coverage.jacoco.xmlReportPaths>
            ../distribution/target/site/jacoco-aggregate/jacoco.xml,
        </sonar.coverage.jacoco.xmlReportPaths>
    </properties>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>dynawo-integration-tests</module>
            </modules>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>javadoc-aggregate-jar</id>
                                <phase>package</phase>
                                <inherited>false</inherited>
                                <goals>
                                    <goal>aggregate-jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>integration-tests</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>dynawo-integration-tests</module>
            </modules>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsyblcore.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-dynawo-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-dynaflow</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-dynawaltz</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>powsybl-dynawaltz</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-dynawaltz-dsl</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-dynawo-integration-tests</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.groovy</groupId>
                <artifactId>groovy-json</artifactId>
                <version>${groovy.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
